--- a/course_work/exercise_materials/package.json
+++ b/course_work/exercise_materials/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "reponsive portfolio website",
   "main": "index.js",
+  "homepage": "https://lumi785.github.io/modern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "jh",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0"
   }
 }
